appId: com.qazandoqafood
---
- launchApp
#- startRecording: fluxo de login
- tapOn:
    id: 'email'
- assertVisible: 'E-mail'
- inputText: teste@teste.com
- tapOn:
    id: 'password'
- inputText: 123456
- hideKeyboard
- tapOn: 'ENTRAR'
